--- a/JIRA_DOM/activity/index.html
+++ b/JIRA_DOM/activity/index.html
@@ -50,7 +50,14 @@
             </div>
         </div>
     </div>
+    <script src = "https://cdn.jsdelivr.net/npm/short-unique-id@latest/dist/short-unique-id.min.js"></script>
+    <script>
+        let uid = new ShortUniqueId();
+    </script>
     <script src="script.js"></script>
 </body>
 
 </html>
+
+
+
