different containers are added

--- a/Camera_App/activity/index.html
+++ b/Camera_App/activity/index.html
@@ -15,7 +15,17 @@
     </div>
     <button class="record round-btn">Record</button>
     <button class="click round-btn">Click</button>
+
+    <div class="filters">
+        <div class="filter red"></div>
+        <div class="filter green"></div>
+        <div class="filter blue"></div>
+        <div class="filter pink"></div>
+        <div class="filter yellow"></div>
+        <div class="filter violet"></div>
+    </div>
     <script src="script.js"></script>
+
 </body>
 
 </html>
