--- a/Excel_Clone/index.html
+++ b/Excel_Clone/index.html
@@ -16,7 +16,7 @@
             <options value="24">24</options>
             <options value="32">32</options>
         </select>
-        <select class = "font-familt">
+        <select class = "font-family">
             <options value="monospace">monospace</options>
             <options value="sans-serif">sans-serif</options>
             <options value="Georgia">Georgia</options>
