--- a/Camera_App/activity/index.html
+++ b/Camera_App/activity/index.html
@@ -13,17 +13,19 @@
     <div class="video-container">
         <video class="video" autoplay></video>
     </div>
-    <button class="record round-btn">Record</button>
-    <button class="click round-btn">Click</button>
-
-    <div class="filters">
-        <div class="filter red"></div>
-        <div class="filter green"></div>
-        <div class="filter blue"></div>
-        <div class="filter pink"></div>
-        <div class="filter yellow"></div>
-        <div class="filter violet"></div>
+    <div class="filter_overlay">
+        <div class="filter_btn-container">
+            <div class="filter" style="background-color: #f4a2613d"></div>
+            <div class="filter" style="background-color: #e85d0440"></div>
+            <div class="filter" style="background-color: #ad5d6d7a"></div>
+            <div class="filter" style="background-color: #2195f323"></div>
+            <div class="filter"></div>
+        </div>
     </div>
+    <div class="timing">00:00:00</div>
+
+    <button class="record round-btn">Record</button>
+    <button class="click-image round-btn">Click</button>
     <script src="script.js"></script>
 
 </body>
